--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bible. Pastoral Epistles -- Criticism, interpretation, etc.'
 - !lcc 'BS'
+- GITenberg
 title: 'The Expositor''s Bible: The Pastoral Epistles'
 url: http://www.gutenberg.org/ebooks/39628
